ADD header and hero section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,43 @@
 <body>
 
 
+  <div class="site-headeer-hero-wrapper">
+    <!-- SITE HEADER -->
+    <header class="site-header">
+      <div class="site-header-container container">
+
+        <a class="site-main-logo-link" href="index.html">
+          <img class="site-main-logo" src="img/coffeeroasters-logo.svg" alt="coffeeroasters logo" width="235" height="24">
+        </a>
+
+        <ul class="sitenav-list">
+                <li class="sitenav-item"><a class="sitenav-link" href="#" >HOME</a></li>
+                <li class="sitenav-item"><a class="sitenav-link" href="#" >ABOUT US</a></li>
+                <li class="sitenav-item"><a class="sitenav-link" href="#" >Create your plan</a></li>
+        </ul>
+      </div>
+    </header>
+
+
+    <!-- HERO -->
+
+      <div class="hero">
+
+        <div class="hero-container container">
+          <div class="hero-info-wrapper">
+            <h2 class="hero-heading">Good coffee <br> is made simply.</h2>
+            <p class="hero-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+            <a class="button button-green" href="">Create your plan</a>
+          </div>
+
+          <img class="hero-img hero-img-index" src="img/hero-img-index.jpg" alt="person holding cold coffee in his hand"
+          width="710" height="696" srcset="img/hero-img-index.jpg 1x, img/hero-img-index@2x.jpg 2x">
+        </div>
+      </div>
+
+  </div>
+
+
   <script src="js/main.js"> </script>
 </body>
 </html>
