--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
 
     <!-- HERO -->
-
       <div class="hero">
 
         <div class="hero-container container">
@@ -46,8 +45,60 @@
           width="710" height="696" srcset="img/hero-img-index.jpg 1x, img/hero-img-index@2x.jpg 2x">
         </div>
       </div>
+    </div>
 
-  </div>
+  <!-- MAIN-CONTENT -->
+  <main class="main-content">
+
+    <!-- INDEX-COLLECTION -->
+    <div class="index-collection">
+      <div class="container">
+        <div class="index-collection-inner">
+          <h2 class="index-collection-heading">our collection</h2>
+
+          <ul class="index-collection-list">
+
+            <li class="index-collection-item">
+              <img class="index-collection-item-packet-img" src="img/danche.png" alt="danche packet" width="450" height="375" srcset="img/danche.png 1x, img/danche@2x.png 2x">
+
+              <div class="index-collection-info">
+                <h3 class="index-collection-item-heading">Danche</h3>
+                <p class="index-collection-item-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+              </div>
+            </li>
+
+            <li class="index-collection-item">
+
+              <div class="index-collection-info">
+                <h4 class="index-collection-item-heading">Gran Espresso</h4>
+                <p class="index-collection-item-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+              </div>
+
+              <img class="index-collection-item-packet-img" src="img/gran-espresso.png" alt="gran-espresso packet" width="450" height="375" srcset="img/gran-espresso.png 1x, img/gran-espresso@2x.png 2x">
+            </li>
+
+            <li class="index-collection-item">
+              <img class="index-collection-item-packet-img" src="img/piccolo.png" alt="piccolo packet" width="450" height="375" srcset="img/piccolo.png 1x, img/piccolo@2x.png 2x">
+
+              <div class="index-collection-info">
+                <h4 class="index-collection-item-heading">Piccollo</h4>
+                <p class="index-collection-item-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+              </div>
+            </li>
+
+            <li class="index-collection-item">
+              <div class="index-collection-info">
+                <h4 class="index-collection-item-heading">Planalto</h4>
+                <p class="index-collection-item-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+              </div>
+
+              <img class="index-collection-item-packet-img" src="img/planalto.png" alt="planalto packet" width="450" height="375" srcset="img/piccolo.png 1x, img/piccolo@2x.png 2x">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
 
 
   <script src="js/main.js"> </script>
