--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <main class="main-content">
 
     <!-- INDEX-COLLECTION -->
-    <div class="index-collection">
+    <section class="index-collection">
       <div class="container">
         <div class="index-collection-inner">
           <h2 class="index-collection-heading">our collection</h2>
@@ -97,7 +97,40 @@
           </ul>
         </div>
       </div>
-    </div>
+    </section>
+
+    <section class="index-features">
+      <div class="container">
+        <div class="index-features-inner">
+          <h2 class="index-features-heading">Why choose us?</h2>
+          <p class="index-features-text">A large part of our role is choosing which particular coffees will be featured <br> in our range. This means working closely with the best coffee growers to give  you a more impactful experience on every level.</p>
+
+          <ul class="index-features-list">
+            <li class="index-features-item">
+              <img  class="index-features-item-img" src="img/best-quality.jpg" alt="man smilling coffee beans" width="433" height="500" srcset="img/best-quality.jpg 1x, img/best-quality@2x.jpg 2x">
+
+              <h3 class="index-features-item-heading">Best quality</h3>
+
+              <p class="index-features-item-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+            </li>
+            <li class="index-features-item">
+              <img  class="index-features-item-img" src="img/exclusive-benefits.jpg" alt="coffee full in dish" width="433" height="500" srcset="img/exclusive-benefits.jpg 1x, img/exclusive-benefits@2x.jpg 2x">
+
+              <h3 class="index-features-item-heading">Exclusive benefits</h3>
+
+              <p class="index-features-item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+            </li>
+            <li class="index-features-item">
+              <img  class="index-features-item-img" src="img/free-shipping.jpg" alt="two girls talking about coffee" width="433" height="500" srcset="img/free-shipping.jpg 1x, img/free-shipping@2x.jpg 2x">
+
+              <h3 class="index-features-item-heading">Free shipping</h3>
+
+              <p class="index-features-item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
 
 
