--- a/index.html
+++ b/index.html
@@ -131,6 +131,43 @@
         </div>
       </div>
     </section>
+
+    <section class="how-it-works">
+      <div class="container">
+        <div class="how-it-works-inner">
+          <h2 class="how-it-works-heading">how it works</h2>
+
+          <ul class="how-it-works-list">
+            <li class="how-it-works-item">
+              <!-- <div class="item-couter">01</div> -->
+
+              <div class="how-it-works-info">
+                <h3 class="item-heading">Pick your coffee</h3>
+                <p class="item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+              </div>
+            </li>
+            <li class="how-it-works-item">
+              <!-- <div class="item-couter">02</div> -->
+
+              <div class="how-it-works-info">
+                <h3 class="item-heading">Choose the frequency</h3>
+                <p class="item-text">Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+              </div>
+            </li>
+            <li class="how-it-works-item">
+              <!-- <div class="item-couter">03</div> -->
+
+              <div class="how-it-works-info">
+                <h3 class="item-heading">Receive and enjoy!</h3>
+                <p class="item-text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.</p>
+              </div>
+            </li>
+          </ul>
+
+          <a class="how-it-works-cta button button-light-brown" href="#">Create your plan</a>
+        </div>
+      </div>
+    </section>
   </main>
 
 
