--- a/index.html
+++ b/index.html
@@ -170,6 +170,43 @@
     </section>
   </main>
 
+  <footer class="site-footer">
+    <div class="container">
+
+        <div class="site-footer-inner">
+          <a class="site-main-logo-link" href="index.html">
+            <img class="site-main-logo" src="img/coffeeroasters-logo.svg" alt="coffeeroasters logo" width="235" height="24">
+          </a>
+
+          <ul class="site-footer-sitenav-list">
+            <li class="site-footer-sitenav-item">
+              <a class="site-footer-sitenav-link" href="#" >HOME</a>
+            </li>
+
+            <li class="site-footer-sitenav-item">
+              <a class="site-footer-sitenav-link" href="#" >ABOUT US</a>
+            </li>
+
+            <li class="site-footer-sitenav-item">
+              <a class="site-footer-sitenav-link" href="#" >Create your plan</a>
+            </li>
+          </ul>
+
+          <ul class="socials-list">
+            <li class="socials-item">
+              <a class="socials-link" href="https://www.facebook.com/thecoffeeroaster/" target="_blank"><img class="socials-item-img" src="img/facebook.svg" alt="facebook" width="30" height="30"></a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link" href="#" target="_blank"><img class="socials-item-img" src="img/twitter.svg" alt="Twitter" width="30" height="25"></a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link" href="https://www.instagram.com/singleestatecoffeeroasters/" target="_blank"><img class="socials-item-img" src="img/instagram.svg" alt="instagram" width="30" height="30"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  </footer>
+
 
   <script src="js/main.js"> </script>
 </body>
