add position styles

--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
     <!-- HERO -->
       <div class="hero">
 
-        <div class="hero-container container">
-          <div class="hero-info-wrapper">
-            <h2 class="hero-heading">Good coffee <br> is made simply.</h2>
-            <p class="hero-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
-            <a class="button button-green" href="">Create your plan</a>
+        <div class="container">
+          <div class="hero-inner">
+            <div class="hero-info-wrapper">
+              <h2 class="hero-heading">Good coffee <br> is made simply.</h2>
+              <p class="hero-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+              <a class="button button-green" href="">Create your plan</a>
+            </div>
+            <div class="hero-img-box">
+              <img class="hero-badge" src="img/hero-badge.png" alt="" width="160" height="160" srcset="img/hero-badge.png 1x, img/hero-badge@2x.png 2x">
+              <img class="hero-img hero-img-index" src="img/hero-img-index.jpg" alt="person holding cold coffee in his hand"
+              width="710" height="696" srcset="img/hero-img-index.jpg 1x, img/hero-img-index@2x.jpg 2x">
+            </div>
           </div>
-
-          <img class="hero-img hero-img-index" src="img/hero-img-index.jpg" alt="person holding cold coffee in his hand"
-          width="710" height="696" srcset="img/hero-img-index.jpg 1x, img/hero-img-index@2x.jpg 2x">
         </div>
       </div>
     </div>
@@ -95,6 +99,11 @@
               <img class="index-collection-item-packet-img" src="img/planalto.png" alt="planalto packet" width="450" height="375" srcset="img/piccolo.png 1x, img/piccolo@2x.png 2x">
             </li>
           </ul>
+
+          <img class="leaves-lift" src="img/leaves-left.svg" alt="" width="402" height="300" >
+          <img class="leaves-lift-light" src="img/leaves-left-light.svg" alt="" width="316" height="269">
+          <img class="leaves-right-mix" src="img/leaves-right-mix.svg" alt="" width="546" height="591">
+
         </div>
       </div>
     </section>
@@ -165,6 +174,8 @@
           </ul>
 
           <a class="how-it-works-cta button button-light-brown" href="#">Create your plan</a>
+
+          <img class="coffee-first-sticker" src="img/coffee-first-sticker.png" alt="logo" width="180" height="150" srcset="img/coffee-first-sticker.png 1x, img/coffee-first-sticker@2x.png 2x">
         </div>
       </div>
     </section>
